[gd_scene load_steps=2 format=3 uid="uid://0uctkbn3mrjl"]

[ext_resource type="Script" uid="uid://cdx6fi85jtbqg" path="res://Scenes/BattleUI.gd" id="1_b25br"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b25br")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Timeline" type="HBoxContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_right = 130.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TimelineSlot1" type="Panel" parent="UI/Timeline"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Timeline/TimelineSlot1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 5

[node name="TimelineSlot2" type="Panel" parent="UI/Timeline"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Timeline/TimelineSlot2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 5

[node name="TimelineSlot3" type="Panel" parent="UI/Timeline"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Timeline/TimelineSlot3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 5

[node name="TimelineSlot4" type="Panel" parent="UI/Timeline"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Timeline/TimelineSlot4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 5

[node name="TimelineSlot5" type="Panel" parent="UI/Timeline"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Timeline/TimelineSlot5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 5

[node name="TimelineSlot6" type="Panel" parent="UI/Timeline"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Timeline/TimelineSlot6"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 5

[node name="Option" type="VBoxContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -423.0
offset_right = 82.0
offset_bottom = -346.0
grow_horizontal = 2
grow_vertical = 0

[node name="Attack" type="Button" parent="UI/Option"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Attack"

[node name="MoveList" type="VBoxContainer" parent="UI/Option"]
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="TargetList" type="VBoxContainer" parent="UI/Option"]
visible = false
layout_mode = 2

[node name="EnemySelection" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
z_index = -1
offset_left = -15.0
offset_top = -13.0
offset_right = 1167.0
offset_bottom = 660.0
mouse_filter = 2
color = Color(0.326324, 0.540557, 0.299829, 1)

[node name="Players" type="Node2D" parent="."]
position = Vector2(0, -16)

[node name="Player1" type="Sprite2D" parent="Players"]
position = Vector2(1024, 240)

[node name="Player2" type="Sprite2D" parent="Players"]
position = Vector2(816, 368)

[node name="Player3" type="Sprite2D" parent="Players"]
position = Vector2(1024, 464)

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy1" type="Sprite2D" parent="Enemies"]
position = Vector2(128, 224)

[node name="Enemy2" type="Sprite2D" parent="Enemies"]
position = Vector2(336, 352)

[node name="Enemy3" type="Sprite2D" parent="Enemies"]
position = Vector2(128, 448)

[connection signal="pressed" from="UI/Option/Attack" to="." method="_on_attack_pressed"]
